<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:text="@string/operaciones_aritmeticas"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtNombreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"
        android:background="@color/black"
        android:hint="@string/escribe_num1"
        android:inputType="numberSigned|numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_placeholder" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="no"
        android:background="@color/black"
        android:hint="@string/escribe_num2"
        android:inputType="numberSigned|numberDecimal"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/selecciona_operacion"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:padding="16dp"
        android:popupBackground="@color/white" />


    <TextView
        android:id="@+id/txtResultadoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/resultador"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Botón Calcular -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_button"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textColor="@color/white" />

    <!-- Botón Limpiar -->
    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_button"
        android:padding="16dp"
        android:text="@string/limpiar"
        android:textColor="@color/white" />

    <!-- Botón Regresar -->
    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_button"
        android:padding="16dp"
        android:text="@string/regresar"
        android:textColor="@color/white" />

</LinearLayout>
